syntax = "proto3";

import "google/protobuf/empty.proto";

package book;
option go_package = "contract/goproto/book";


message Book {
    string ID =1;
	string Title =2;     
	string Author  =3;   
	string ISBN  =4;     
	string Publisher =5;  
	string PublishDate =6;
    string	Status   =7;   
}

message GetAllBooksResponse {
    repeated Book items =1;
}

message DeleteBookRequest {
    string BookID =1;
}

service BookService {
  rpc CreateBook(Book) returns (Book);
  rpc GetBooks(google.protobuf.Empty) returns (GetAllBooksResponse);
  rpc UpdateBook(Book) returns (Book);
  rpc DeleteBook(DeleteBookRequest) returns (google.protobuf.Empty);
}

